--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
     "@types/react-dom": "^18.3.1",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
+    "i18next": "^23.16.4",
     "postcss-cli": "^11.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.1.0",
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
+    "store": "^2.0.12",
     "tailwindcss": "^3.4.14",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -48,5 +51,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/store": "^2.0.5"
   }
 }
