--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.6",
     "store": "^2.0.12",
     "tailwindcss": "^3.4.14",
     "typescript": "^4.9.5",
@@ -30,7 +31,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && echo '/* /index.html 200'|cat >build/_redirects",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
