--- a/package.json
+++ b/package.json
@@ -5,10 +5,6 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.3.0",
     "@tanstack/react-query": "^5.59.16",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
     "@types/node": "^16.18.115",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
@@ -54,6 +50,12 @@
     ]
   },
   "devDependencies": {
-    "@types/store": "^2.0.5"
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.0.1",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/jest": "^29.5.14",
+    "@types/store": "^2.0.5",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.2.5"
   }
 }
